<resources>
    <string name="app_name">Hack For Green</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plantation">Plantation</string>
    <string name="cfc">GHG</string>
    <string name="learn_with_game">Learn With Game</string>
    <string name="green_resources">Green Resources</string>
    <string name="e_waste">E-Waste</string>
    <string name="select_activity">Select an activity</string>
    <string name="button">Calculate</string>
    <string name="textView4">%1$s</string>
    <string name="textView3">%1$s</string>
    <string name="empty"></string>
    <string name="showResult">%1$d</string>
    <string name="status">%1$s</string>
    <string name="news">Articles</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Full Name</string>
    <string name="submit">Submit</string>
    <string name="conf_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="want_logout">Are you sure want to Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_to_want_to_exit_application">Do you want to Exit?</string>
    <string name="task">Task</string>
    <string name="tag_line">Lets make earth greener</string>

    <string-array name="activities">
        <item>Select activity</item>
        <item>Driving</item>
        <item>Bus</item>
        <item>Subway or train</item>
        <item>Flight</item>
        <item>Electricity use</item>
        <item>Eating beef, pork, or lamb</item>
        <item>Eating fruits or vegetables</item>
    </string-array>
</resources>